--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -104,8 +104,8 @@
     <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
     <dimen name="ninchat_questionnaire_checkbox_margin">10dp</dimen>
 
-    <dimen name="ninchat_questionnaire_label_text_size">@dimen/ninchat_text_size</dimen>
-    <dimen name="ninchat_questionnaire_bot_name_text_size">@dimen/ninchat_text_size</dimen>
+    <dimen name="ninchat_questionnaire_label_text_size">17sp</dimen>
+    <dimen name="ninchat_questionnaire_bot_name_text_size">18sp</dimen>
     <dimen name="ninchat_questionnaire_textview_text_size">@dimen/ninchat_text_size</dimen>
 
     <!-- Titlebar -->
