--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -6,7 +6,7 @@
         <item name="android:colorPrimary">@color/ninchat_colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/ninchat_colorPrimaryDark</item>
         <item name="android:colorAccent">@color/ninchat_colorAccent</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/ninchat_text_size</item>
         <item name="android:textColor">@color/ninchat_colorPrimary</item>
         <item name="android:linksClickable">true</item>
         <item name="android:autoLink">all</item>
