--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -96,6 +96,7 @@
     <color name="ninchat_color_chat_command_input_text_placeholder">@color/ninchat_color_textarea_text_hint</color>
     <color name="ninchat_color_chat_command_input_background">@color/ninchat_color_transparent</color>
     <color name="ninchat_color_chat_command_input_border">@color/ninchat_color_transparent</color>
+    <color name="ninchat_color_chat_command_input_divider">@color/ninchat_color_transparent</color>
 
 
 </resources>
