--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -144,12 +144,13 @@
         <item name="android:contentDescription">"Agent avatar</item>
     </style>
 
-    <style name="NinchatTheme.Questionnaire.BotView.Text" parent="NinchatTheme">
+    <style name="NinchatTheme.Questionnaire.BotView.Text" parent="NinchatTheme.Questionnaire">
         <item name="android:layout_marginEnd">10dp</item>
         <item name="android:layout_toEndOf">@id/ninchat_chat_message_bot_avatar</item>
         <item name="android:gravity">center|start</item>
         <item name="android:minHeight">@dimen/ninchat_chat_activity_message_title_height</item>
         <item name="android:textColor">@color/ninchat_color_questionnaire_bot_name_text</item>
+        <item name="android:textSize">@dimen/ninchat_questionnaire_bot_name_text_size</item>
     </style>
 
     <style name="NinchatTheme.Backlog.Info" parent="NinchatTheme">
