--- a/ninchatsdk/src/main/res/layout/control_buttons.xml
+++ b/ninchatsdk/src/main/res/layout/control_buttons.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ninchat_control_button_root"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ninchat_control_button_root"
     android:orientation="horizontal">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/ninchat_image_button_previous"
         style="@style/NinchatTheme.Button.Previous"
         android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="@dimen/ninchat_button_height"
-        android:layout_alignParentStart="true"
         android:src="@drawable/ninchat_icon_back"
-        android:tint="@color/ninchat_color_button_secondary_text"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:tint="@color/ninchat_color_button_secondary_text" />
 
     <TextView
         android:id="@+id/ninchat_button_previous"
         style="@style/NinchatTheme.Button.Previous"
-        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_width="0dp"
         android:layout_gravity="center_vertical"
+        android:layout_height="wrap_content"
         android:minHeight="@dimen/ninchat_button_height"
-        android:visibility="gone"
-        tools:text="Previous button"
-        tools:visibility="gone" />
+        android:layout_weight="0.45"
+        android:minWidth="@dimen/ninchat_chat_control_follow_button_width"
+        tools:visibility="gone"
+        tools:text="Previous button" />
+
+    <View
+        android:id="@+id/view_padding"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.02"
+        android:visibility="invisible"
+        tools:visibility="gone"/>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/ninchat_image_button_next"
         style="@style/NinchatTheme.Button.Next"
         android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="@dimen/ninchat_button_height"
-        android:layout_alignParentEnd="true"
         android:src="@drawable/ninchat_icon_next"
-        android:tint="@color/ninchat_color_button_primary_text"
-        android:visibility="gone" />
+        android:tint="@color/ninchat_color_button_primary_text" />
 
     <TextView
         android:id="@+id/ninchat_button_next"
-        style="@style/NinchatTheme.Button.Next"
-        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center_vertical"
         android:layout_marginTop="7dp"
+        style="@style/NinchatTheme.Button.Next"
+        android:layout_gravity="center_vertical"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:minHeight="@dimen/ninchat_button_height"
-        android:visibility="gone"
-        tools:text="Next button"
-        tools:visibility="visible" />
+        android:layout_weight="0.45"
+        android:minWidth="@dimen/ninchat_chat_control_follow_button_width"
+        tools:visibility="visible"
+        tools:text="Next button" />
 
-</RelativeLayout>
+</LinearLayout>
