questionnaire item: add default padding to top and bottom review feedback

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
@@ -19,11 +19,13 @@
         android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/ninchat_titlebar"
-        android:background="@android:color/transparent"
+        android:paddingBottom="@dimen/ninchat_questionnaire_item_margin_bottom"
+        android:paddingTop="@dimen/ninchat_questionnaire_items_margin_top"
         android:id="@+id/questionnaire_form_rview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/ninchat_titlebar"
+        android:background="@android:color/transparent"
         android:overScrollMode="never"
-        tools:itemCount="5"/>
+        tools:itemCount="5" />
 </RelativeLayout>
