--- a/ninchatsdk/src/main/res/layout/review_rating_text_view.xml
+++ b/ninchatsdk/src/main/res/layout/review_rating_text_view.xml
@@ -16,6 +16,7 @@
         android:textColor="@color/ninchat_color_text_top"
         android:textStyle="bold"
         tools:visibility="visible"
+        android:textIsSelectable="true"
         tools:text="How was our customer service?" />
 
     <TextView
