--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/ninchat_chat_background_tiled"
     android:keepScreenOn="true"
-    tools:context=".activities.NinchatChatActivity">
+    tools:context=".ninchatchatactivity.view.NinchatChatActivity">
 
     <LinearLayout
         android:id="@+id/send_message_container"
@@ -15,15 +15,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="5dp"
         android:background="@drawable/ninchat_chat_command_input_divider"
-        android:onClick="onEditTextClick"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/message"
+            android:id="@+id/ninchat_message_input"
             style="@style/NinchatTheme.Backlog.CommandView"
-            android:imeOptions="actionDone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
             tools:hint="Enter your message" />
 
         <LinearLayout
@@ -39,7 +38,6 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
                 android:adjustViewBounds="true"
-                android:onClick="onVideoCall"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ninchat_icon_textarea_camera"
                 android:visibility="gone"
@@ -52,20 +50,18 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
                 android:adjustViewBounds="true"
-                android:onClick="onAttachmentClick"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ninchat_icon_textarea_attachment"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
             <RelativeLayout
-                android:id="@+id/send_button_icon"
+                android:id="@+id/ninchat_message_send_button_icon"
                 android:layout_width="@dimen/ninchat_send_button_height"
                 android:layout_height="@dimen/ninchat_send_button_height"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
                 android:background="@drawable/ninchat_textarea_submit_button"
-                android:onClick="onSendClick"
                 android:visibility="gone"
                 tools:visibility="visible">
 
@@ -80,13 +76,14 @@
             </RelativeLayout>
 
             <Button
-                android:id="@+id/send_button"
+                android:id="@+id/ninchat_message_send_button"
                 style="@style/NinchatTheme.Button.Send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
-                android:onClick="onSendClick"
+                android:visibility="gone"
+                tools:visibility="visible"
                 tools:text="Send" />
 
         </LinearLayout>
@@ -94,12 +91,12 @@
     </LinearLayout>
 
     <include
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:id="@+id/ninchat_titlebar"
         layout="@layout/ninchat_titlebar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -112,7 +109,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/ninchat_chat_activity_close_button_top_margin"
         android:layout_marginEnd="@dimen/ninchat_chat_activity_close_button_end_margin"
-        android:onClick="onCloseChat"
         android:visibility="gone"
         tools:text="Close"
         tools:visibility="gone" />
@@ -123,90 +119,109 @@
         android:layout_height="@dimen/ninchat_chat_activity_video_view_height"
         android:layout_below="@+id/ninchat_titlebar"
         android:background="@color/ninchat_colorPrimaryDark"
-        android:visibility="gone"
+        android:visibility="visible"
         tools:visibility="visible">
 
-        <org.webrtc.SurfaceViewRenderer
-            android:id="@+id/video"
+        <FrameLayout
+            android:id="@+id/ninchat_jitsi_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true" />
+            android:layout_height="480dp"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/black"
+            android:visibility="visible"
+            tools:visibility="gone">
+            <!-- Note: A org.jitsi.meet.sdk.JitsiMeetView will be added here and so add tools:ignore="UselessParent" -->
+        </FrameLayout>
 
-        <org.webrtc.SurfaceViewRenderer
-            android:id="@+id/pip_video"
-            android:layout_width="@dimen/ninchat_chat_activity_pip_video_width"
-            android:layout_height="@dimen/ninchat_chat_activity_pip_video_height"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true" />
-
-        <ImageView
-            android:id="@+id/video_call_spinner"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_spinner_size"
-            android:layout_height="@dimen/ninchat_chat_activity_video_call_spinner_size"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_icon_loader_large"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/ninchat_video_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-            android:padding="@dimen/ninchat_chat_activity_video_control_padding">
+            android:visibility="gone"
+            tools:visibility="gone">
+
+            <org.webrtc.SurfaceViewRenderer
+                android:id="@+id/video"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true" />
+
+            <org.webrtc.SurfaceViewRenderer
+                android:id="@+id/pip_video"
+                android:layout_width="@dimen/ninchat_chat_activity_pip_video_width"
+                android:layout_height="@dimen/ninchat_chat_activity_pip_video_height"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true" />
 
             <ImageView
-                android:id="@+id/fullscreen_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
+                android:id="@+id/video_call_spinner"
+                android:layout_width="@dimen/ninchat_chat_activity_video_call_spinner_size"
+                android:layout_height="@dimen/ninchat_chat_activity_video_call_spinner_size"
+                android:layout_centerInParent="true"
                 android:adjustViewBounds="true"
-                android:onClick="onToggleFullScreen"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_toggle_full" />
+                android:src="@drawable/ninchat_icon_loader_large"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/audio_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleAudio"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_sound_on" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:padding="@dimen/ninchat_chat_activity_video_control_padding">
 
-            <ImageView
-                android:id="@+id/microphone_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleMicrophone"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_microphone_on" />
+                <ImageView
+                    android:id="@+id/fullscreen_on_off"
+                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
+                    android:adjustViewBounds="true"
+                    android:onClick="onToggleFullScreen"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_video_toggle_full" />
 
-            <ImageView
-                android:id="@+id/video_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleVideo"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_camera_on" />
+                <ImageView
+                    android:id="@+id/audio_on_off"
+                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
+                    android:adjustViewBounds="true"
+                    android:onClick="onToggleAudio"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_video_sound_on" />
 
-            <ImageView
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:adjustViewBounds="true"
-                android:onClick="onVideoHangUp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_hangup" />
+                <ImageView
+                    android:id="@+id/microphone_on_off"
+                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
+                    android:adjustViewBounds="true"
+                    android:onClick="onToggleMicrophone"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_video_microphone_on" />
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/video_on_off"
+                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
+                    android:adjustViewBounds="true"
+                    android:onClick="onToggleVideo"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_video_camera_on" />
+
+                <ImageView
+                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
+                    android:adjustViewBounds="true"
+                    android:onClick="onVideoHangUp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_video_hangup" />
+
+            </LinearLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
 
