p2p video view: Separate ninchat p2p view from message activity class

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -83,8 +83,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
                 android:visibility="gone"
-                tools:visibility="visible"
-                tools:text="Send" />
+                tools:text="Send"
+                tools:visibility="visible" />
 
         </LinearLayout>
 
@@ -113,117 +113,15 @@
         tools:text="Close"
         tools:visibility="gone" />
 
-    <RelativeLayout
+    <include
         android:id="@+id/videoContainer"
+        layout="@layout/ninchat_video_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/ninchat_chat_activity_video_view_height"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/ninchat_titlebar"
-        android:background="@color/ninchat_colorPrimaryDark"
-        android:visibility="visible"
-        tools:visibility="visible">
-
-        <FrameLayout
-            android:id="@+id/ninchat_jitsi_layout"
-            android:layout_width="match_parent"
-            android:layout_height="480dp"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/black"
-            android:visibility="visible"
-            tools:visibility="gone">
-            <!-- Note: A org.jitsi.meet.sdk.JitsiMeetView will be added here and so add tools:ignore="UselessParent" -->
-        </FrameLayout>
-
-        <RelativeLayout
-            android:id="@+id/ninchat_video_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:visibility="gone">
-
-            <org.webrtc.SurfaceViewRenderer
-                android:id="@+id/video"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true" />
-
-            <org.webrtc.SurfaceViewRenderer
-                android:id="@+id/pip_video"
-                android:layout_width="@dimen/ninchat_chat_activity_pip_video_width"
-                android:layout_height="@dimen/ninchat_chat_activity_pip_video_height"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true" />
-
-            <ImageView
-                android:id="@+id/video_call_spinner"
-                android:layout_width="@dimen/ninchat_chat_activity_video_call_spinner_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_call_spinner_size"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_loader_large"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                android:padding="@dimen/ninchat_chat_activity_video_control_padding">
-
-                <ImageView
-                    android:id="@+id/fullscreen_on_off"
-                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                    android:adjustViewBounds="true"
-                    android:onClick="onToggleFullScreen"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_video_toggle_full" />
-
-                <ImageView
-                    android:id="@+id/audio_on_off"
-                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                    android:adjustViewBounds="true"
-                    android:onClick="onToggleAudio"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_video_sound_on" />
-
-                <ImageView
-                    android:id="@+id/microphone_on_off"
-                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                    android:adjustViewBounds="true"
-                    android:onClick="onToggleMicrophone"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_video_microphone_on" />
-
-                <ImageView
-                    android:id="@+id/video_on_off"
-                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                    android:adjustViewBounds="true"
-                    android:onClick="onToggleVideo"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_video_camera_on" />
-
-                <ImageView
-                    android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                    android:adjustViewBounds="true"
-                    android:onClick="onVideoHangUp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_video_hangup" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-    </RelativeLayout>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_list"
