--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -29,8 +29,11 @@
     </style>
 
     <style name="NinchatTheme.Button.Dialog" parent="NinchatTheme.Button">
-        <item name="android:height">@dimen/ninchat_dialog_button_height</item>
-        <item name="android:layout_height">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">40dp</item>
+        <item name="android:height">@null</item>
+        <item name="android:minHeight">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Close" parent="NinchatTheme.Button">
@@ -39,8 +42,11 @@
     </style>
 
     <style name="NinchatTheme.Button.Dialog.Close" parent="NinchatTheme.Button.Close">
-        <item name="android:height">@dimen/ninchat_dialog_button_height</item>
-        <item name="android:layout_height">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">40dp</item>
+        <item name="android:height">@null</item>
+        <item name="android:minHeight">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Close.Chat" parent="NinchatTheme.Button.Close">
