--- a/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
@@ -1,56 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/ninchat_color_modal_background"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <TextView
-        android:id="@+id/ninchat_close_chat_dialog_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/ninchat_chat_activity_close_chat_dialog_title_height"
-        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-        android:gravity="center"
-        tools:text="Close chat"
-        android:textColor="@color/ninchat_color_modal_title_text"/>
+        android:layout_height="0dp"
+        android:layout_weight="0.45"
+        android:background="@color/ninchat_color_modal_background">
 
+        <TextView
+            android:id="@+id/ninchat_close_chat_dialog_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center"
+            android:minHeight="@dimen/ninchat_chat_activity_close_chat_dialog_title_height"
+            android:textColor="@color/ninchat_color_modal_title_text"
+            tools:text="Close chat" />
+
+        <View
+            android:id="@+id/close_chat_dialog_border"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/ninchat_close_chat_dialog_title"
+            android:foreground="@color/ninchat_activity_bottom_matter_background" />
+
+        <TextView
+            android:id="@+id/ninchat_close_chat_dialog_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/close_chat_dialog_border"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center"
+            android:textColor="@color/ninchat_color_modal_title_text"
+            tools:text="Are you sure you want to close the chat?" />
+
+
+        <TextView
+            android:id="@+id/ninchat_close_chat_dialog_confirm"
+            style="@style/NinchatTheme.Button.Dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ninchat_close_chat_dialog_description"
+            android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
+            android:layout_marginBottom="@dimen/ninchat_chat_activity_close_chat_dialog_button_inner_margin"
+            android:gravity="center"
+            tools:text="Close" />
+
+        <TextView
+            android:id="@+id/ninchat_close_chat_dialog_decline"
+            style="@style/NinchatTheme.Button.Dialog.Close"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ninchat_close_chat_dialog_confirm"
+            android:layout_marginBottom="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
+            android:gravity="center"
+            tools:text="Continue" />
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:foreground="@color/ninchat_activity_bottom_matter_background" />
-
-    <TextView
-        android:id="@+id/ninchat_close_chat_dialog_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-        android:gravity="center"
-        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
-        tools:text="Are you sure you want to close the chat?"
-        android:textColor="@color/ninchat_color_modal_title_text" />
-
-    <Button
-        android:id="@+id/ninchat_close_chat_dialog_confirm"
-        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        style="@style/NinchatTheme.Button.Dialog"
-        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
-        tools:text="Close" />
-
-    <Button
-        android:id="@+id/ninchat_close_chat_dialog_decline"
-        style="@style/NinchatTheme.Button.Dialog.Close"
-        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_inner_margin"
-        android:layout_marginBottom="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
-        tools:text="Continue" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@android:color/transparent" />
 
 </LinearLayout>
