--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -61,7 +61,7 @@
 
         <Button
             android:id="@+id/ninchat_video_call_consent_dialog_accept"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             style="@style/NinchatTheme.Button.Dialog"
@@ -71,7 +71,7 @@
         <Button
             android:id="@+id/ninchat_video_call_consent_dialog_decline"
             style="@style/NinchatTheme.Button.Dialog.Close"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_inner_margin"
