--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -28,6 +28,13 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <style name="NinchatTheme.Button.Queue.Item" parent="NinchatTheme.Button">
+        <item name="android:height">@null</item>
+        <item name="android:lines">@null</item>
+        <item name="android:layout_marginTop">@null</item>
+        <item name="android:layout_marginBottom">@null</item>
+    </style>
+
     <style name="NinchatTheme.Button.Dialog" parent="NinchatTheme.Button">
         <item name="android:layout_marginStart">40dp</item>
         <item name="android:layout_marginEnd">40dp</item>
@@ -37,8 +44,10 @@
     </style>
 
     <style name="NinchatTheme.Button.Close" parent="NinchatTheme.Button">
+        <item name="android:height">@null</item>
         <item name="android:background">@drawable/ninchat_chat_secondary_button</item>
         <item name="android:textColor">@color/ninchat_color_button_secondary_text</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Dialog.Close" parent="NinchatTheme.Button.Close">
