Review and test bugs fix (#229)

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -8,16 +8,6 @@
     android:keepScreenOn="true"
     tools:context=".activities.NinchatChatActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/message_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_above="@id/send_message_container"
-        android:overScrollMode="never"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_chat_message" />
-
     <LinearLayout
         android:id="@+id/send_message_container"
         android:layout_width="match_parent"
@@ -31,6 +21,7 @@
         <EditText
             android:id="@+id/message"
             style="@style/NinchatTheme.Backlog.CommandView"
+            android:imeOptions="actionDone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:hint="Enter your message" />
@@ -107,6 +98,8 @@
         layout="@layout/ninchat_titlebar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -216,6 +209,17 @@
         </LinearLayout>
 
     </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/message_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_above="@id/send_message_container"
+        android:layout_below="@id/videoContainer"
+        android:overScrollMode="never"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_chat_message" />
 
     <include
         android:id="@+id/ninchat_chat_error"
