--- a/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/ninchat_close_chat_dialog_confirm"
-        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         style="@style/NinchatTheme.Button.Dialog"
@@ -46,7 +46,7 @@
     <Button
         android:id="@+id/ninchat_close_chat_dialog_decline"
         style="@style/NinchatTheme.Button.Dialog.Close"
-        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_inner_margin"
