--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -42,6 +42,7 @@
 
     <style name="NinchatTheme.Questionnaire.Label" parent="NinchatTheme.Questionnaire">
         <item name="android:textColor">@color/ninchat_color_questionnaire_label_text</item>
+        <item name="android:textIsSelectable">true</item>
         <item name="android:layout_marginBottom">@dimen/ninchat_questionnaire_item_margin_bottom
         </item>
         <item name="android:textSize">@dimen/ninchat_questionnaire_label_text_size</item>
@@ -53,8 +54,26 @@
         <item name="android:background">@drawable/ninchat_questionnaire_label_disabled</item>
     </style>
 
+    <style name="NinchatTheme.Questionnaire.Label.Form" parent="NinchatTheme.Questionnaire.Label">
+        <item name="android:background">@drawable/null_</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Label.Form.Disabled" parent="NinchatTheme.Questionnaire.Label.Disabled">
+        <item name="android:background">@drawable/null_</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+    </style>
+
     <style name="NinchatTheme.Questionnaire.Label.Error" parent="NinchatTheme.Questionnaire.Label">
         <item name="android:textColor">@color/ninchat_color_questionnaire_label_text_error</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Label.Form.Error" parent="NinchatTheme.Questionnaire.Label.Error">
+        <item name="android:background">@drawable/null_</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
     </style>
 
     <style name="NinchatTheme.Questionnaire.InputText" parent="NinchatTheme.Questionnaire">
@@ -123,7 +142,7 @@
         <item name="android:dividerHeight">0.5dp</item>
         <item name="android:divider">@color/ninchat_color_questionnaire_dropdown</item>
         <item name="android:textColor">@color/ninchat_color_questionnaire_dropdown</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">start|center_vertical</item>
         <item name="android:overlapAnchor">false</item>
         <item name="android:spinnerMode">dropdown</item>
         <item name="android:dropDownWidth">match_parent</item>
@@ -140,15 +159,15 @@
     </style>
 
     <style name="NinchatTheme.Questionnaire.Dropdown.Spinner" parent="NinchatTheme.Questionnaire.Dropdown">
-        <item name="android:background">@null</item>
+        <item name="android:background">@drawable/null_</item>
     </style>
 
     <style name="NinchatTheme.Questionnaire.Dropdown.Text" parent="NinchatTheme.Questionnaire.Dropdown">
-        <item name="android:background">@null</item>
+        <item name="android:background">@drawable/null_</item>
     </style>
 
     <style name="NinchatTheme.Questionnaire.Dropdown.Text.Selected" parent="NinchatTheme.Questionnaire.Dropdown.Selected">
-        <item name="android:background">@null</item>
+        <item name="android:background">@drawable/null_</item>
     </style>
 
 
@@ -164,6 +183,7 @@
 
 
     <style name="NinchatTheme.Questionnaire.TextView" parent="NinchatTheme.Questionnaire">
+        <item name="android:textIsSelectable">true</item>
         <item name="android:textColor">@color/ninchat_color_questionnaire_textview_text</item>
         <item name="android:layout_marginBottom">@dimen/ninchat_questionnaire_item_margin_bottom
         </item>
@@ -175,6 +195,18 @@
         <item name="android:textColor">@color/ninchat_color_questionnaire_textview_text_disabled
         </item>
         <item name="android:background">@drawable/ninchat_questionnaire_textview_disabled</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.TextView.Form" parent="NinchatTheme.Questionnaire.TextView">
+        <item name="android:background">@drawable/null_</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.TextView.Form.Disabled" parent="NinchatTheme.Questionnaire.TextView.Disabled">
+        <item name="android:background">@drawable/null_</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
     </style>
 
 </resources>
